k8s/base/gfs-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gfs-client
spec:
  type: NodePort
  selector:
    app: gfs-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30000
