k8s/base/gfs-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gfs-server
spec:
  selector:
    app: gfs-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
