k8s/base/gfs-server1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gfs-server1
spec:
  selector:
    app: gfs-server1
  ports:
    - protocol: TCP
      port: 4592
      targetPort: 4592
