k8s/base/gfs-server2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gfs-server2
spec:
  selector:
    app: gfs-server2
  ports:
    - protocol: TCP
      port: 4593
      targetPort: 4593
