k8s/base/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  selector:
    app: kafka-broker
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
